--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>Hello this</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Page Title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+  </style>
+  </head>
+  <body>
+    <h1>My website</h1>
+    <p>A website</p>
+    
+  </body>
+</html>
