--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Page Title</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-    }
-  </style>
-  </head>
-  <body>
-    <h1>My website</h1>
-    <p>A website</p>
-    
-  </body>
+    <head>
+        <title>Page Title</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            body {
+              font-family: Arial, Helvetica, sans-serif;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="header">
+            <h1>My Website</h1>
+            <p>My website.</p>
+        </div>
+
+        <div class="navbar">
+            <a href="#">link1</a>
+        </div>
+
+
+
+
+        <div class="footer">
+            <h2>Footer</h2>
+        </div>
+
+    </body>
 </html>
