--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
             <h1>My Website</h1>
             <p>My website.</p>
         </div>
+        .header{
+            padding: 80px;
+            text-align: center;
+            background: #1abc9c;
+            color: white;
+        }
+        .header h1{
+            font-size: 40px;
+        }
 
         <div class="navbar">
             <a href="#">link1</a>
