--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>hi</title>
+        <title>hello</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             body {
               font-family: Arial, Helvetica, sans-serif;
+            }
+            .header{
+                padding: 80px;
+                text-align: center;
+                background: #1abc9c;
+                color: white;
+            }
+            .header h1{
+                font-size: 40px;
             }
         </style>
     </head>
@@ -15,15 +24,7 @@
             <h1>My Website</h1>
             <p>My website.</p>
         </div>
-        .header{
-            padding: 80px;
-            text-align: center;
-            background: #1abc9c;
-            color: white;
-        }
-        .header h1{
-            font-size: 40px;
-        }
+
 
         <div class="navbar">
             <a href="#">link1</a>
