--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             .header{
                 padding: 80px;
                 text-align: center;
-                background: #1abc9c;
+                background: #cc6699;
                 color: white;
             }
             .header h1{
