--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
             .header h1{
                 font-size: 40px;
             }
+            .navbar{
+                overflow: hidden;
+                background-color: #333;
+            }
+            .navbar a{
+                float: left;
+                display: block;
+                color: white;
+                text-align: center;
+                text-decoration: none;
+                padding: 14px 20px;
+            }
         </style>
     </head>
     <body>
