--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
+            {
+            box-sizing: border-box;
+            }
             body {
               font-family: Arial, Helvetica, sans-serif;
             }
@@ -17,6 +20,7 @@
             .header h1{
                 font-size: 40px;
             }
+
             .navbar{
                 overflow: hidden;
                 background-color: #333;
@@ -28,6 +32,44 @@
                 text-align: center;
                 text-decoration: none;
                 padding: 14px 20px;
+            }
+            .navbar a:hover{
+                background-color: #ddd;
+                color: black;
+            }
+            .row {
+                display: flex;
+                flex-wrap: wrap;
+            }
+
+            .sidebar {
+                flex: 30%;
+                background-color: #f1f1f1;
+                padding: 20px;
+            }
+
+            .main {
+                flex: 70%;
+                background-color: white;
+                padding: 20px;
+            }
+
+            .footer {
+                padding: 20px;
+                text-align: center;
+                background: #ddd;
+            }
+
+            @@media screen and (max-width: 700px) {
+                .row{
+                    flex-direction: column;
+                }
+            }
+            @@media screen and (max-width: 700px) {
+                .navbar a{
+                    float: none;
+                    width: 100%;
+                }
             }
         </style>
     </head>
@@ -42,8 +84,14 @@
             <a href="#">link1</a>
         </div>
 
+        <div class="row">
+        </div>
 
+        <div class="sidebar">
+        </div>
 
+        <div class="main">
+        </div>
 
         <div class="footer">
             <h2>Footer</h2>
