--- a/index.html
+++ b/index.html
@@ -85,12 +85,15 @@
         </div>
 
         <div class="row">
+            <h1>hola</h1>
         </div>
 
         <div class="sidebar">
+            <h1>hi</h1>
         </div>
 
         <div class="main">
+            <h1>bonjour</h1>
         </div>
 
         <div class="footer">
