--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>hello</title>
+        <title>heyo</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
@@ -60,7 +60,7 @@
                 background: #ddd;
             }
 
-            
+
         </style>
     </head>
     <body>
