--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             .navbar{
                 overflow: hidden;
                 background-color: #333;
+                position:fixed;/*may want to remove*/
             }
             .navbar a{
                 float: left;
@@ -42,13 +43,18 @@
                 flex-wrap: wrap;
             }
 
-            .sidebar {
+            .side {
                 flex: 30%;
                 background-color: #f1f1f1;
                 padding: 20px;
+                width: 100px;
+                top:0;
+                left:0;
+
             }
 
             .main {
+                margin-left: 100px;
                 flex: 70%;
                 background-color: white;
                 padding: 20px;
@@ -59,6 +65,18 @@
                 text-align: center;
                 background: #ddd;
             }
+            @@media screen and (max-width: 700px) {
+                .row{
+                    flex-direction: column;
+                }
+            }
+            @@media screen and (max-width: 700px) {
+                .navbar a{
+                    float: none;
+                    width: 100%;
+                }
+            }
+
 
 
         </style>
@@ -74,11 +92,9 @@
             <a href="#">link1</a>
         </div>
 
-        <div class="row">
-            <h1>hola</h1>
-        </div>
 
-        <div class="sidebar">
+
+        <div class="side">
             <h1>hi</h1>
         </div>
 
