--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
             .main {
                 margin-left: 100px;
-                flex: 70%;
+            /*    flex: 70%;*/
                 background-color: white;
-                padding: 20px;
+                padding: 0px 10px;
             }
 
             .footer {
