--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
               font-family: Arial, Helvetica, sans-serif;
             }
             .header{
-                padding: 80px;
+                /*padding: 80px;*/
                 text-align: center;
                 background: #cc6699;
                 color: white;
@@ -51,7 +51,7 @@
                 z-index: 1; /* Stay on top */
                 top: 0; /* Stay at the top */
                 left: 0;
-                background-color: #111; /* Black */
+                background-color: #f1f1f1;
                 overflow-x: hidden; /* Disable horizontal scroll */
                 padding-top: 20px;
 
