--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
               font-family: Arial, Helvetica, sans-serif;
             }
             .header{
-                /*padding: 80px;*/
+                padding: 80px;
                 text-align: center;
                 background: #cc6699;
                 color: white;
@@ -51,9 +51,10 @@
                 z-index: 1; /* Stay on top */
                 top: 0; /* Stay at the top */
                 left: 0;
-                background-color: #f1f1f1;
+                background-color: #f1f1f1; /* Black */
                 overflow-x: hidden; /* Disable horizontal scroll */
                 padding-top: 20px;
+                padding-left: 20px;
 
             }
 
