--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
               font-family: Arial, Helvetica, sans-serif;
             }
             .header{
-                padding: 2px;
+                align: center;
+                padding: 80px;
                 text-align: center;
                 background: #cc6699;
                 color: white;
@@ -24,6 +25,7 @@
             .navbar{
                 overflow: hidden;
                 background-color: #333;
+                position: fixed;
                 /*position:fixed;may want to remove*/
             }
             .navbar a{
