--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 /*position:fixed;may want to remove*/
             }
             .navbar a{
-                float: left;
+                float: right;
                 display: block;
                 color: white;
                 text-align: center;
